force-app/main/default/objects/Patient__c/Patient__c.object-meta.xml
<CustomObject>
    <description>Master record of the patient</description>
    <label>Patient</label>
    <nameField>
        <displayFormat>ID-SF-{000000}</displayFormat>
        <label>Patient ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>