force-app/main/default/objects/Patient__c/fields/BodyWeightInKg__c.field-meta.xml
<CustomField>
    <fullName>BodyWeightInKg__c</fullName>
    <description>PATIENT’S WEIGHT AT THE TIME OF PRODUCT ORDER</description>
    <inlineHelpText>Body Weight in Kilogramm (kg), with one decimal place, at the time of product order</inlineHelpText>
    <label>Body Weight in kg</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>