force-app/main/default/objects/Patient__c/fields/DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirth__c</fullName>
    <description>Standard Date Field, will be split to 3 fields by formula</description>
    <inlineHelpText>Select the DOB of patient in Date Format</inlineHelpText>
    <label>Date of Birth (DOB)</label>
    <type>Date</type>
</CustomField>