force-app/main/default/objects/Patient__c/fields/DateOfBirthText__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirthText__c</fullName>
    <formula>TEXT(YEAR(DateOfBirth__c)) &amp; "-" &amp; TEXT(MONTH(DateOfBirth__c)) &amp; "-" &amp; TEXT(Day(DateOfBirth__c))</formula>
    <inlineHelpText>DOB shown as text in YYYY-MM-DD Format</inlineHelpText>
    <label>DOB as Text</label>
    <type>Text</type>
</CustomField>