force-app/main/default/objects/Patient__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>First Name of Patient</description>
    <inlineHelpText>First Name of Patient</inlineHelpText>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>