force-app/main/default/objects/Patient__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Last Name of Patient</description>
    <inlineHelpText>Last Full Name of Patient</inlineHelpText>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>