force-app/main/default/objects/Patient__c/fields/MiddleNameInitial__c.field-meta.xml
<CustomField>
    <fullName>MiddleNameInitial__c</fullName>
    <description>one letter only</description>
    <inlineHelpText>one letter only, e.g. for John please insert a "J"</inlineHelpText>
    <label>Middle Name Initial</label>
    <length>1</length>
    <type>Text</type>
</CustomField>