force-app/main/default/objects/Patient__c/fields/PatientAccount__c.field-meta.xml
<CustomField>
    <fullName>PatientAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patient</relationshipName>
    <type>Lookup</type>
</CustomField>