force-app/main/default/objects/Patient__c/fields/SiteAccount__c.field-meta.xml
<CustomField>
    <fullName>SiteAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Site</relationshipName>
    <type>Lookup</type>
</CustomField>